corrigindo bug de alinhamento e tamanho dinamico dos items do catalogo

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -64,4 +64,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "plugin-serialization" }
-
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
